@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-16 08:46:41, took 00:14:40, with 50 workers, on 3526 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2024-11-16 09:47:26, took 00:14:36, with 50 workers, on 3529 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3020,6 +3020,9 @@ http://sources.freertr.org/cfg/rout-bgp856.tst;rout-bgp856.tst;success;bgp route
 http://sources.freertr.org/cfg/rout-bgp857.tst;rout-bgp857.tst;success;bgp routepolicy filtering with pathlimit with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp858.tst;rout-bgp858.tst;success;bgp change in pathlimit
 http://sources.freertr.org/cfg/rout-bgp859.tst;rout-bgp859.tst;success;bgp change in pathlimit with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp860.tst;rout-bgp860.tst;success;unicast+spf over bgp
+http://sources.freertr.org/cfg/rout-bgp861.tst;rout-bgp861.tst;success;unicast+spf over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp862.tst;rout-bgp862.tst;success;unicast+spf over bgp with additional path
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
