@@ -3016,6 +3016,9 @@ qc pass: bgp routemap filtering with pathlimit with soft-reconfig
 qc pass: bgp routepolicy filtering with pathlimit with soft-reconfig
 qc pass: bgp change in pathlimit
 qc pass: bgp change in pathlimit with soft-reconfig
+qc pass: unicast+spf over bgp
+qc pass: unicast+spf over bgp with soft-reconfig
+qc pass: unicast+spf over bgp with additional path
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
