@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-16 08:46:41, took 00:14:40, with 50 workers, on 3526 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2024-11-16 09:47:26, took 00:14:36, with 50 workers, on 3529 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3032,6 +3032,9 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp857.tst">rout-bgp857.tst</a></td><td>success</td><td>bgp routepolicy filtering with pathlimit with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp858.tst">rout-bgp858.tst</a></td><td>success</td><td>bgp change in pathlimit</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp859.tst">rout-bgp859.tst</a></td><td>success</td><td>bgp change in pathlimit with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp860.tst">rout-bgp860.tst</a></td><td>success</td><td>unicast+spf over bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp861.tst">rout-bgp861.tst</a></td><td>success</td><td>unicast+spf over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp862.tst">rout-bgp862.tst</a></td><td>success</td><td>unicast+spf over bgp with additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
