@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-16 08:58:23, took 00:11:20, with 50 workers, on 619 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-11-16 09:59:37, took 00:11:49, with 50 workers, on 619 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
