@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-16 08:58:23, took 00:11:20, with 50 workers, on 619 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-11-16 09:59:37, took 00:11:49, with 50 workers, on 619 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
